--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: 1-59 * * * *
+    - cron: * 8,14,20 * * *
   watch:
     types: started
 
