--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,6 +12,7 @@ jobs:
   build:
     env:
       COOKIES: ${{ secrets.COOKIES }}
+      TOKEN: ${{ secrets.TOKEN }}
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
 
